tests/paczka1/fuzzy1/60380670.err
Error in line 7: z2nb0qYk A923 42,6
Error in line 1: 8QQJMORkcfA A923 60,1
Error in line 10: RyoGqXx S473 77,1
Error in line 15: RyoGqXx S765 68,0
Error in line 33: gCoNTvZMp A923 32,8
Error in line 36: 8QQJMORkcfA S473 69,2
